[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/Slash.gd" type="Script" id=1]

[node name="Slash" type="Node2D"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="SlashTimer" type="Timer" parent="."]

[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="SlashTimer" to="." method="_on_SlashTimer_timeout"]
